# ChangeLog for dev-perl/libwww-perl
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/libwww-perl/ChangeLog,v 1.81 2008/04/28 23:22:51 yuval Exp $

*libwww-perl-5.812 (28 Apr 2008)

  28 Apr 2008; Yuval Yaari <yuval@gentoo.org> +libwww-perl-5.812.ebuild:
  Version bump

  12 May 2007; Joshua Kinard <kumba@gentoo.org> libwww-perl-5.805.ebuild:
  Stable on mips.

  16 Apr 2007; Markus Rothe <corsair@gentoo.org> libwww-perl-5.805.ebuild:
  Stable on ppc64

  05 Mar 2007; Andrej Kacian <ticho@gentoo.org> libwww-perl-5.805.ebuild:
  Stable on x86, bug #169152.

  20 Oct 2006; Bryan Østergaard <kloeri@gentoo.org>
  libwww-perl-5.805.ebuild:
  Stable on Alpha.

  20 Oct 2006; Michael Cummings <mcummings@gentoo.org>
  -libwww-perl-5.69-r2.ebuild, -libwww-perl-5.79.ebuild,
  -libwww-perl-5.800.ebuild, -libwww-perl-5.803.ebuild,
  libwww-perl-5.803-r1.ebuild, libwww-perl-5.805.ebuild:
  Cleaning up ebuilds

  16 Sep 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  libwww-perl-5.805.ebuild:
  ppc stable

  18 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  libwww-perl-5.805.ebuild:
  Marking amd64 stable

  06 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  libwww-perl-5.69-r2.ebuild, libwww-perl-5.79.ebuild,
  libwww-perl-5.800.ebuild, libwww-perl-5.803.ebuild,
  libwww-perl-5.803-r1.ebuild, libwww-perl-5.805.ebuild:
  Adding perl dep; fixed DEPEND

  05 Jul 2006; Christian Hartmann <ian@gentoo.org>
  libwww-perl-5.69-r2.ebuild, libwww-perl-5.79.ebuild,
  libwww-perl-5.800.ebuild, libwww-perl-5.803.ebuild:
  Fixed RDEPEND wrt bug #134781

  29 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  libwww-perl-5.805.ebuild:
  Stable on hppa

  12 Jun 2006; Michael Cummings <mcummings@gentoo.org>
  libwww-perl-5.805.ebuild:
  Marking sparc stable

  27 May 2006; <mcummings@gentoo.org> libwww-perl-5.803-r1.ebuild,
  libwww-perl-5.805.ebuild:
  Bug 134025, RDEP's set :)

*libwww-perl-5.805 (01 May 2006)
